--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -3,7 +3,7 @@
 <div *ngFor="let product of products">
   <h3>
     <a
-      [title]="product.name + ' details'"
+      title="product.name + ' details'"
       [routerLink]="['/products', product.id]"
     >
       {{ product.name }}
@@ -18,8 +18,3 @@
   <app-product-alerts [product]="product" (notify)="onNotify()">
   </app-product-alerts>
 </div>
-<!-- 
-Copyright Google LLC. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at https://angular.io/license
--->
